CMAKE_MINIMUM_REQUIRED(VERSION 2.4)
if(COMMAND cmake_policy)
  cmake_policy(SET CMP0003 NEW)
endif(COMMAND cmake_policy)
PROJECT(strdump)

#struct
SET(STRUCT_DIR ${CMAKE_SOURCE_DIR}/struct)
FIND_PACKAGE(STRUCT)
INCLUDE_DIRECTORIES(${STRUCT_INCLUDE_DIRS})

SET(SRC_LIST strdump.cpp)
#static library
ADD_LIBRARY(strdump STATIC ${SRC_LIST})
SET_TARGET_PROPERTIES(strdump PROPERTIES OUTPUT_NAME "strdump")
SET_TARGET_PROPERTIES(strdump PROPERTIES CLEAN_DIRECT_OUTPUT 1)
INSTALL(TARGETS strdump ARCHIVE DESTINATION lib)

#tool 
#SET(TOOL_SRC_LIST strdumptool.cpp)
#ADD_EXECUTABLE(strdumptool ${TOOL_SRC_LIST})
#TARGET_LINK_LIBRARIES(strdumptool strdump)
#ADD_DEPENDENCIES(strdumptool strdump)
#INSTALL(TARGETS strdumptool RUNTIME DESTINATION bin)






